Added segment mapping